src/fewshot/npd1/npd1_warning.txt
code.c:25:16: error: Null pointer dereference: p [nullPointer]
        return p->value + b;
               ^